commit 12/20/2014 part 2